# funpou

./: .tagpr  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
.claude/: settings.json
.claude/rules/: testing.md
.github/workflows/: ci.yml  release.yml  tagpr.yml
benches/: storage.rs
docs/: configuration.md  usage.md
src/: cli.rs  commands.rs  config.rs  lib.rs  main.rs  memo.rs  obsidian.rs  storage.rs  template.rs
src/commands/: add.rs  clear.rs  config.rs  list.rs
