[package]
name = "funpou"
version = "0.1.2"
edition = "2024"
rust-version = "1.85"
description = "Quick one-line memos with automatic timestamps"
license = "MIT"
authors = ["Toshiki Takezawa <tsk.take815@gmail.com>"]
repository = "https://github.com/to4iki/funpou"
homepage = "https://github.com/to4iki/funpou"
documentation = "https://docs.rs/funpou"
readme = "README.md"
keywords = ["memo", "cli", "note", "obsidian", "journal"]
categories = ["command-line-utilities"]
include = [
    "src/**/*.rs",
    "Cargo.toml",
    "Cargo.lock",
    "README.md",
    "LICENSE",
]

[[bin]]
name = "fnp"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

[dev-dependencies]
tempfile = "3"
